--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -55,6 +55,7 @@
         illum.
         Quibusdam!</p>
         <p>paragraph added by Sam! please work and be connected to github</p>
+      <p>this is Joey's paragraph I am testing git collab woo hoo</p>
     </main>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
