--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         Quibusdam!</p>
         <p>paragraph added by Sam! please work and be connected to github</p>
       <p>this is Joey's paragraph I am testing git collab woo hoo</p>
+      <p>
+        Take 2, this is jack maccormack trying to stage and commit
+      </p>
     </main>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
