--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tooo</a>
+              <a class="nav-link" href="#">Test</a>
             </li>
           </ul>
         </div>
